--- a/.vimperator/styles/reddit.css
+++ b/.vimperator/styles/reddit.css
@@ -15,6 +15,13 @@ div.content
     padding:10px 20px 0 10px !important;
 }
 
+div.infobar
+{
+    background: #242424 !important;
+    color: white !important;
+    border: 1px solid #241414 !important;
+}
+
 div.content a
 {
     color: #608baa !important;
