--- a/.vimperator/styles/wikipedia.css
+++ b/.vimperator/styles/wikipedia.css
@@ -34,7 +34,7 @@ input, textarea
     -moz-appearance: none !important;
 }
 
-.mw-geshi,code
+.mw-geshi,code,pre
 {
     background-color: #242424 !important;
     border-color: #545454 !important;
