--- a/.vimperator/styles/tokyotosho.css
+++ b/.vimperator/styles/tokyotosho.css
@@ -6,7 +6,8 @@ body, #main
 {
     background: #141414 !important;
     color: #747474 !important;
-    font-family: terminus !important;
+    font-family: sans-serif !important;
+    font-size: 13px !important;
 }
 
 tr
@@ -34,7 +35,7 @@ a
 {
     display: block !important;
     padding-left: 12px !important;
-    font-size: 14px !important;
+    font-size: 10px !important;
     overflow: hidden !important;
     padding-bottom: 6px!important;
     height: 14px !important;
@@ -46,6 +47,7 @@ a
 .desc-top a
 {
     color:#9fbc00 !important;
+    font-size: 13px !important;
 }
 
 img.icon, .dcenter > img
@@ -60,8 +62,9 @@ ul.news, div.centertext, p.centertext, ul.menuwrapper, h3, h2
 
 h1
 {
-    font-size: 16px !important;
+    font-size: 13px !important;
     padding-bottom: 5px !important;
+    font-weight: normal !important;
 }
 
 input,select,textarea
