--- a/.vimperator/styles/ixquick.css
+++ b/.vimperator/styles/ixquick.css
@@ -18,12 +18,17 @@ div > span.normaltext:first-child, div > font:first-child + br + span.normaltext
     display: block !important;
 }
 
-table[id="inlinetable"], table[id="inlinetable_ix"] {
+table[id="inlinetable"], table[id="inlinetable_ix"], table[id="inlinetable_st"] {
+    width: 100% !important;
     display: block !important;
     padding: 1em !important;
     padding-top: 1em !important;
-    padding-bottom: 0.2em !important;
+    padding-bottom: .5em !important;
     border-bottom: 1px solid #343434 !important;
+}
+
+tbody, tbody tr, tbody td:nth-child(2) {
+    width: 100% !important;
 }
 
 table br {
