--- a/.vimperator/styles/wikipedia.css
+++ b/.vimperator/styles/wikipedia.css
@@ -19,7 +19,7 @@ body,#content
     color: #9fbc00 !important;
 }
 
-table, .tright, .thumbinner, table.gallery td, .thumb, .infobox, #catlinks, #filetoc, th, .infobox td, table td, .mw-search-formheader
+table, .tright, .thumbinner, table.gallery td, .thumb, .infobox, #catlinks, #filetoc, th, .infobox td, table td, .mw-search-formheader, .thumbcaption
 {
     background-color: #242424 !important;
     border-color: #343434 !important;
