--- a/.vimperator/styles/google.css
+++ b/.vimperator/styles/google.css
@@ -1,8 +1,27 @@
 #gbar, #guser,
-#tsf, #prs,
-.mbEnd, .clr, .gbh, .csb
+#prs, #logo,
+.mbEnd, .clr, .gbh, .csb,
+.nobr.xsm, .lsb
 {
     display: none !important;
+}
+
+#sft
+{
+    margin: 0 !important;
+}
+
+#sff
+{
+    padding-right: 16px !important;
+}
+
+#ssb
+{
+    position: absolute !important;
+    right: 16px !important;
+    top: 16px !important;
+    background: none !important;
 }
 
 body,
