--- a/.vimperator/styles/dukgo.css
+++ b/.vimperator/styles/dukgo.css
@@ -58,7 +58,7 @@ a.le q
     opacity: 0.5 !important;
 }
 
-input, textarea
+input, textarea, select
 {
     background-color: #242424 !important;
     border: 1px solid #343434 !important;
