vimperator.styles.youtube: hide default language box

--- a/.vimperator/styles/youtube.css
+++ b/.vimperator/styles/youtube.css
@@ -15,6 +15,7 @@ body
 #watch-channel-videos-panel,
 #search-option-expander,
 #search-duplicates-message,
+#default-language-box,
 .yt-uix-expander-head,
 .ratingVS
 {
