--- a/.vimperator/styles/youtube.css
+++ b/.vimperator/styles/youtube.css
@@ -16,12 +16,13 @@ body
 #search-option-expander,
 #search-duplicates-message,
 #default-language-box,
+#watch-panel,
 .yt-uix-expander-head,
-.ratingVS
+.ratingVS,
+#watch-panel
 {
     display: none !important;
 }
-
 .yt-uix-pager, .yt-uix-button
 {
     border-color: #343434 !important;
@@ -30,11 +31,31 @@ body
 }
 
 #watch-channel-vids-div, #watch-video-details, .watch-video-added,
-#watch-video-details-inner, #watch-channel-vids-top
+#watch-video-details-inner, #watch-channel-vids-top, 
+#watch-headline-container, #watch-video-container,
+.watch-module-body
 {
     background: #141414 !important;
     color: #e0e0e0 !important;
     border: 0 !important;
+}
+
+#watch-headline-title
+{
+    padding-bottom: 0 !important;
+}
+
+#watch-headline-title span
+{
+    color: #eee !important;
+    padding-left: 2em !important;
+}
+
+#watch-headline-user-info
+{
+    color: #eee !important;
+    padding-left: 4.5em !important;
+    padding-top: -3em !important;
 }
 
 #watch-other-vids
@@ -42,18 +63,23 @@ body
     width: 100% !important;
 }
 
-a
+a, span.title
 {
     color: #608BCC !important;
     text-decoration: none !important;
 }
 
-#watch-related-discoverbox, .watch-discoverbox
+#watch-related
 {
     overflow: visible !important;
     height: none !important;
     border: 0 !important;
-    padding-top: 40em !important;
+    padding-top: 50em !important;
+}
+
+#watch-sidebar
+{
+    width: 100% !important;
 }
 
 .watch-discoverbox-body
