vimperator.styles.youtube: update
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/youtube.css
+++ b/.vimperator/styles/youtube.css
@@ -19,7 +19,8 @@ body
 #watch-panel,
 .yt-uix-expander-head,
 .ratingVS,
-#watch-panel
+#watch-panel,
+#guided-help-alert
 {
     display: none !important;
 }
