--- a/.vimperator/styles/google.css
+++ b/.vimperator/styles/google.css
@@ -1,9 +1,15 @@
 #gbar, #guser,
 #prs, #logo,
 .mbEnd, .clr, .gbh, .csb,
-.nobr.xsm, .lsb
+.nobr.xsm, .lsb, #leftnav
 {
     display: none !important;
+}
+
+#center_col
+{
+    border-left: 0 !important;
+    margin-left: 10px !important;
 }
 
 #sft
