--- a/.vimperator/styles/youtube.css
+++ b/.vimperator/styles/youtube.css
@@ -70,6 +70,11 @@ a, span.title
     text-decoration: none !important;
 }
 
+#watch-sidebar
+{
+    margin-top: 0 !important;
+}
+
 #watch-related,#watch-related-discoverbox
 {
     overflow: visible !important;
