vimperator: add shortcut for turning on global style
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/reddit.css
+++ b/.vimperator/styles/reddit.css
@@ -281,3 +281,7 @@ div.message div.message div.message div.message div.message div.message div.mess
 	background-color: #121212 !important;
 }
 
+
+.comment .child {
+    border-left: none !important;
+}
