vimperator.styles.vim_org: use nth-child to not mess up on hints
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/vim_org.css
+++ b/.vimperator/styles/vim_org.css
@@ -11,7 +11,7 @@ a:link
     text-decoration: none !important;
 }
 
-.sidebar, .darkbg, body > table:first-child, body > table:last-child
+.sidebar, .darkbg, body > table:first-child, body > table:nth-child(3)
 {
     display: none !important;
 }
