--- a/.vimperator/styles/global.css
+++ b/.vimperator/styles/global.css
@@ -3,6 +3,9 @@ body
     background: #141414;
     color: #e0e0e0;
     margin: 0.5em 2em;
+    vertical-align: baseline;
+    line-height: 1.3;
+    font-family: sans-serif;
 }
 
 body[bgcolor]
