vimperator.styles.wikipedia: update
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/wikipedia.css
+++ b/.vimperator/styles/wikipedia.css
@@ -69,6 +69,9 @@ border-color: black !important;
 #siteNotice,
 #siteSub,
 #footer,
+#mw-head, #mw-head-base,
+#mw-page-base,
+#mw-panel,
 #editpage-copywarn2,
 #editpage-specialchars,
 #pt-logout,
