vimperator.styles.google: update
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/google.css
+++ b/.vimperator/styles/google.css
@@ -1,6 +1,6 @@
 #gbar, #guser,
 #prs, #logo,
-.mbEnd, .clr, .gbh, .csb,
+#mbEnd, .clr, .gbh, .csb,
 .nobr.xsm, .lsb, #leftnav
 {
     display: none !important;
