vimperator.styles.google: fix
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/google.css
+++ b/.vimperator/styles/google.css
@@ -1,7 +1,7 @@
 #gbar, #guser,
 #prs, #logo,
 #mbEnd, .clr, .gbh, .csb,
-.nobr.xsm, .lsb, #leftnav
+.nobr.xsm, .lsb, #leftnav, .mbEnd
 {
     display: none !important;
 }
