vimperator.styles: update dukgo style
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.vimperator/styles/dukgo.css
+++ b/.vimperator/styles/dukgo.css
@@ -24,6 +24,11 @@ a
     border: 2px solid #444444 !important;
 }
 
+#rprw2
+{
+    width: 100% !important;
+}
+
 #sxw
 {
     width: 383px !important;
