--- a/.vimperator/styles/dukgo.css
+++ b/.vimperator/styles/dukgo.css
@@ -69,3 +69,11 @@ input, textarea, select
     color: #e0e0e0 !important;
     -moz-appearance: none !important;
 }
+
+.clud {
+    color: #666 !important;
+}
+
+.clud a {
+    color: #444 !important;
+}
