Update vim plugins
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.pentadactyl/styles/dukgo.css
+++ b/.pentadactyl/styles/dukgo.css
@@ -77,3 +77,12 @@ input, textarea, select
 .clud a {
     color: #444 !important;
 }
+
+.carbonad {
+    background-color: #141414 !important;
+    border: none !important;
+}
+
+.cr1d, .cr2c, .cr4b {
+    border: none !important;
+}
