--- a/.pentadactyl/styles/google.css
+++ b/.pentadactyl/styles/google.css
@@ -36,6 +36,12 @@ li.g:nth-child(even) {
     background: #121212 !important;
 }
 
+a.l {
+    font-size: 1.1em !important;
+    padding-bottom: 5px !important;
+    display: block;
+}
+
 a
 {
     color: #608baa !important;
@@ -51,7 +57,7 @@ em, b {
     font-family: Verdana !important;
 }
 
-.st {
+.st, .s, h3, #topstuff {
     color: white !important;
 }
 
@@ -65,6 +71,12 @@ em, b {
 
 span.spell {
     color: white !important;
+}
+
+.cur {
+    color: #608baa !important;
+    font-weight: bold !important;
+    font-size: 1.1em !important;
 }
 
 cite
