--- a/.pentadactyl/styles/youtube.css
+++ b/.pentadactyl/styles/youtube.css
@@ -1,112 +1,56 @@
 body
 {
     background: #141414 !important;
-    color: #e0e0e0 !important;
+    color: white !important;
     padding-top: 3em !important;
+    font-family: verdana !important;
 }
 
-#watch-this-vid-info,
-#masthead-container,
-#watch-longform-buttons,
-#subscribeDiv,
-#watch-channel-icon,
-#watch-url-embed-wrapper,
-#footer,
-#watch-channel-videos-panel,
-#search-option-expander,
-#search-duplicates-message,
-#default-language-box,
-#watch-panel,
-.yt-uix-expander-head,
-.ratingVS,
-#watch-panel,
-#guided-help-alert,
-.watch-module-body h4
-{
+#masthead-container, #alerts,
+#footer-container, .yt-badge-std,
+#search-section-header, #search-refinements,
+.horizontal-rule, #watch-main, #watch-headline-user-info {
     display: none !important;
 }
-.yt-uix-pager, .yt-uix-button
-{
-    border-color: #343434 !important;
-    background: #1a1a1a !important;
-    color: #e0e0e0 !important;
-}
 
-#watch-channel-vids-div, #watch-video-details, .watch-video-added,
-#watch-video-details-inner, #watch-channel-vids-top, 
-#watch-headline-container, #watch-video-container,
-.watch-module-body
-{
-    background: #141414 !important;
-    color: #e0e0e0 !important;
-    border: 0 !important;
-}
-
-#watch-headline-title
-{
-    padding-bottom: 0 !important;
-}
-
-#watch-headline-title span
-{
-    color: #eee !important;
-    padding-left: 2em !important;
-}
-
-#watch-headline-user-info
-{
-    color: #eee !important;
-    padding-left: 4.5em !important;
-    padding-top: -3em !important;
-}
-
-#watch-other-vids
-{
-    width: 100% !important;
-}
-
-a, span.title
-{
-    color: #608BCC !important;
-    text-decoration: none !important;
-}
-
-#watch-sidebar
-{
-    margin-top: 0 !important;
-}
-
-#watch-related,#watch-related-discoverbox
-{
-    overflow: visible !important;
-    height: none !important;
-    border: 0 !important;
-    padding-top: 50em !important;
-}
-
-#watch-sidebar
-{
-    width: 100% !important;
-}
-
-.watch-discoverbox-body
-{
-    background: none !important;
-    border: none !important;
-}
-
-.watch-ppv-vid
-{
-    background: #242424 !important;
-}
-
-.name
-{
+#eow-title, #search-header, .num-results {
     color: white !important;
 }
 
-h1
+.horizontal-rule {
+    border-bottom: none !important;
+}
+
+.yt-uix-button, .yt-uix-button-content {
+    background: #141414 !important;
+    color: white !important;
+    text-shadow: none !important;
+    border-color: #343434 !important;
+}
+
+.result-item {
+}
+
+.result-item:nth-child(n) {
+    background: #0f0f0f !important;
+}
+
+.result-item:nth-child(3n) {
+    background: #121212 !important;
+}
+
+a
 {
-    padding-bottom: 1em !important;
-    padding-left: 1em !important;
+    color: #608baa !important;
+    text-decoration: none !important;
+}
+
+#watch-player embed {
+    position: absolute !important;
+    top: 100px !important;
+    left: 0 !important;
+    width: 100px !important;
+    height: 100px !important;
+    display: block !important;
+    -moz-binding: none !important
 }
