Switch vim to vundle management.
Signed-off-by: Lucas de Vries <lucas@glacicle.org>

--- a/.config/dwb/userstyles/dukgo.css
+++ b/.config/dwb/userstyles/dukgo.css
@@ -1,6 +1,6 @@
 // ==UserStyle==
 // @name           DuckDuckGo Userstyle
-// @include        http://*.duckduckgo.com/*
+// @include        http://(*.)?duckduckgo.com/*
 // ==/UserStyle==
 body,html
 {
