--- a/.config/dwb/userstyles/google.css
+++ b/.config/dwb/userstyles/google.css
@@ -1,6 +1,6 @@
 // ==UserStyle==
 // @name           Google Userstyle
-// @include        http://*.google.*
+// @include        https?://(*.)?google.*
 // ==/UserStyle==
 body
 {
