--- a/.config/dwb/userstyles/tokyotosho.css
+++ b/.config/dwb/userstyles/tokyotosho.css
@@ -1,6 +1,6 @@
 // ==UserStyle==
 // @name           TokyoTosho Userstyle
-// @include        http://*.tokyotosho.info/*
+// @include        http://(*.)?tokyotosho.info/*
 // ==/UserStyle==
 body, #main
 {
