--- a/.config/dwb/userstyles/wikipedia.css
+++ b/.config/dwb/userstyles/wikipedia.css
@@ -1,6 +1,6 @@
 // ==UserStyle==
 // @name           Wikipedia Userstyle
-// @include        http://*.wikipedia.*/*
+// @include        http://(*.)?(wikipedia|wikimedia).*/*
 // ==/UserStyle==
 body,#content
 {
